# micro-grad

./: .gitignore  CMakeLists.txt
include/: ANN.h  DoubleGradTest.h  MicroGrad.h  TrainingTest.h  Utils.h
src/: ANN.cpp  DoubleGradTest.cpp  MicroGrad.cpp  TrainingTest.cpp  Utils.cpp  program.cpp
